--- a/Countries List/Countries List/MainScene/Base.lproj/Main.storyboard
+++ b/Countries List/Countries List/MainScene/Base.lproj/Main.storyboard
@@ -35,6 +35,9 @@
                                 <rect key="frame" x="190" y="433" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aeX-uw-cO5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
